methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:9: error: '(' expected but identifier found.
  } else (for i <- 1 to nbPas){recule();}
              ^MethodsArgs:12: error: illegal start of simple expression
} 
^